--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ body {
 	background:#24252b;
 	font:13px Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	line-height:1.428571429;
-	color:#999
+	color:#555;
 }
 a {
 	text-decoration:none;
@@ -80,7 +80,7 @@ h3 {
 h4 {
 	font:26px/1em Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin:0 0 32px;
-	color:#999
+	color:#555
 }
 .extra-wrap {
 	overflow:hidden
@@ -141,6 +141,7 @@ nav.tm_navbar li a {
 	font:14px/36px 'Droid Serif';
 	color:#333;
 	background:0 0;
+	border: thin solid transparent;
 -webkit-transition:all .25s;
 -o-transition:all .25s;
 transition:all .25s
@@ -307,7 +308,7 @@ transition:all .25s ease
 .thumb-box1 {
 	padding:360px 0 23px;
 	background:url(../img/bg_pic1.jpg) no-repeat;
-	background-position: 80% 30%;			
+	background-position: 80% 30%;
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box
@@ -401,7 +402,7 @@ transition:all .25s
 	margin-bottom:13px
 }
 .thumb-box2 .box p {
-	color:#999;
+	color:#555;
 	margin-bottom:24px
 }
 .thumb-box2 .col-lg-3 {
@@ -464,7 +465,7 @@ transition:all .25s
 	margin-bottom:12px
 }
 .thumb-box5 p {
-	color:#999
+	color:#555
 }
 .thumb-box5 .col-lg-6 {
 	margin-bottom:31px
@@ -474,7 +475,7 @@ transition:all .25s
 	padding:60px 0 5px
 }
 .thumb-box6 h2, .thumb-box6 h3, .thumb-box6 p {
-	color:#fff
+	color:#000;
 }
 .thumb-box6 figure {
 	position:relative;
@@ -899,14 +900,14 @@ transition:all .25s
 	text-decoration:none;
 	margin:0;
 	padding:10px 28px;
-	border:0;
+	border: 1px solid transparent;
 	color:inherit;
 	vertical-align:middle;
 	font:14px/18px Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	position:relative;
 	z-index:1;
 	background:#fed136;
-	color:#fff;
+	color:#000;
 	border-radius:4px;
 	overflow:hidden;
 	-webkit-backface-visibility:hidden;
@@ -1243,7 +1244,7 @@ transition:all .25s
 	border-radius:5px;
 	border:1px solid #fff;
 	font:14px/18px Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color:#999;
+	color:#555;
 	padding:8px 14px;
 	height:36px;
 	resize:none;
@@ -1290,7 +1291,7 @@ transition:all .25s
 	text-align:center;
 	border:1px solid #fff;
 	font:14px/18px Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color:#999;
+	color:#555;
 	padding:8px 14px;
 	background:#fff;
 	height:36px;
@@ -1319,7 +1320,7 @@ transition:all .25s
 	height:64px;
 	line-height:18px;
 	border-radius:0;
-	color:#999;
+	color:#555;
 	padding:20px 14px;
 	resize:none
 }
@@ -1406,7 +1407,7 @@ transition:all .25s
 	color:#333
 }
 .mail {
-	color:#999;
+	color:#555;
 	font:13px Arial, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-decoration:underline;
 -webkit-transition:all .25s;
@@ -1633,4 +1634,7 @@ width:100%;
 float:none
 }
 }
-s
+
+.thumbnail .caption {
+	color: #555;
+}
